# helloasso-to-authentik

./: Cargo.toml  README.md
docs/: design.md
helloasso-api/: Cargo.toml  README.md
helloasso-api/.openapi-generator/: FILES
helloasso-api/docs/: CheckoutIntentsManagementApi.md  DirectoryApi.md  FormsApi.md  HelloAssoApiV5CommonModelsAccountsClientsApiClientModel.md  HelloAssoApiV5CommonModelsAccountsClientsPublicPutApiClientRequest.md  HelloAssoApiV5CommonModelsAccountsCompanyLegalStatusModel.md  HelloAssoApiV5CommonModelsAccountsOrganismCategoryModel.md  HelloAssoApiV5CommonModelsApiNotificationsApiNotificationType.md  HelloAssoApiV5CommonModelsApiNotificationsApiUrlNotificationModel.md  HelloAssoApiV5CommonModelsApiNotificationsPostApiUrlNotificationBody.md  HelloAssoApiV5CommonModelsCartsCheckoutIntentResponse.md  HelloAssoApiV5CommonModelsCartsCheckoutPayer.md  HelloAssoApiV5CommonModelsCartsCheckoutPaymentOptions.md  HelloAssoApiV5CommonModelsCartsCheckoutTerm.md  HelloAssoApiV5CommonModelsCartsInitCheckoutBody.md  HelloAssoApiV5CommonModelsCartsInitCheckoutResponse.md  HelloAssoApiV5CommonModelsCommonContactModel.md  HelloAssoApiV5CommonModelsCommonDocumentModel.md  HelloAssoApiV5CommonModelsCommonImageModel.md  HelloAssoApiV5CommonModelsCommonMetaModel.md  HelloAssoApiV5CommonModelsCommonPaginationModel.md  HelloAssoApiV5CommonModelsCommonPlaceModel.md  HelloAssoApiV5CommonModelsCommonResultsWithPaginationModelFormLightModel.md  HelloAssoApiV5CommonModelsCommonResultsWithPaginationModelItem.md  (+85 more)
service/: Cargo.toml
service/src/: main.rs
src/: main.rs
(+118 files in other folders)
