[package]
name = "helloasso-to-authentik"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
helloasso = "0.4.0"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
