[package]
name = "helloasso-to-authentik"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
helloasso = "0.4.0"
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
url = "2.5.8"
